# irbispanel

./: .gitignore  CMakeLists.txt  admin_plesk.sqlite3  app.cpp  app.h  irbispanel.pro  main.cpp  test.pro  websocket.cpp  websocket.h
admin/: .gitignore  .travis.yml  README.md  appveyor.yml  gulpfile.ts  package.json  tsconfig.json  tslint.json  typings.json
admin/app/layouts/base/: app.routes.ts  app.service.ts  auth.guard.ts  base.ts  main.ts
admin/app/layouts/dashboard/components/: dashboard.ts
admin/app/pages/component/components/: component.ts
admin/app/pages/login/components/: login.ts
admin/app/pages/sysinfo/components/: sysinfo.ts
admin/app/pages/tables/components/: tables.ts
admin/app/shared/sidebar/: sidebar.html
admin/src/client/: index.html  tsconfig.json
admin/src/client/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts  app.routing.module.ts  app.service.ts  auth-guard.service.ts  globals.ts  main.ts
admin/src/client/app/dashboard/: dashboard.component.ts  dashboard.module.ts  dashboard.routes.ts
admin/src/client/app/dashboard/bs-component/: bsComponent.component.ts  bsComponent.module.ts
admin/src/client/app/dashboard/bs-element/: bsElement.module.ts
admin/src/client/app/dashboard/charts/: chart.component.ts  chart.module.ts
admin/src/client/app/dashboard/forms/: forms.module.ts
admin/src/client/app/dashboard/grid/: grid.module.ts
admin/src/client/app/dashboard/home/: home.component.html  home.component.ts  home.module.ts  home.routes.ts
admin/src/client/app/dashboard/sysinfo/: index.ts  sysinfo.component.ts  sysinfo.module.ts  sysinfo.routes.ts
admin/src/client/app/dashboard/tables/: table.module.ts
admin/src/client/app/layouts/base/: auth.guard.ts  base.ts
admin/src/client/app/layouts/dashboard/components/: dashboard.ts
admin/src/client/app/login/: login-routing.module.ts  login.component.html  login.component.ts  login.module.ts
admin/src/client/app/pages/bootstrap-element/components/: bs_element.ts
admin/src/client/app/pages/charts/components/: charts.ts
admin/src/client/app/pages/component/components/: component.ts
admin/src/client/app/pages/forms/components/: forms.ts
admin/src/client/app/pages/grid/components/: grid.ts
admin/src/client/app/pages/home/components/: home.ts
admin/src/client/app/pages/login/components/: login.ts
admin/src/client/app/services/: channel.websocket.service.ts  chat.channel.service.ts  websocket.service.ts
admin/src/client/app/shared/config/: env.config.ts
admin/src/client/app/shared/sidebar/: sidebar.html  sidebar.ts
admin/src/client/app/shared/topnav/: topnav.html  topnav.ts
admin/src/client/app/signup/: signup.component.html  signup.module.ts  signup.routes.ts
admin/src/client/assets/bootstrap/: _variables.scss
admin/src/client/css/: _variables.scss  app.scss  main.scss
admin/tools/config/: project.config.ts  seed.config.ts
admin/tools/env/: base.ts
admin/tools/tasks/seed/: build.html_css.ts
cert/certs/: server.crt
cert/private/: server.key
nginx/cert/: irbispanel.crt  irbispanel.csr  irbispanel.key  new.ssl.csr  privkey.pem
nginx/conf/: koi-utf  koi-win  nginx.conf  win-utf
nginx/html/: index.html
qjson/: json_scanner.yy
src/common/: PluginCommands.h
src/common/helper/: helper.cpp  helper.h
src/common/process/: Process.cpp  Process.h
src/common/pseudo_terminal/: OperationsTerminal.cpp  OperationsTerminal.h  PseudoTerminal.cpp  PseudoTerminal.h  ThreadedObject.h  ThreadedObjectBase.h  example.cpp  pseudoTerminal.cpp  pseudoTerminal.h  sadsd.cpp
src/common/request/: Request.cpp  Request.h  RequestInterface.h
src/common/session/: session.cpp  session.h
src/common/system/: System.cpp  System.h  SystemInfo.cpp  SystemInfo.h
src/common/user/: SystemUser.cpp  SystemUser.h
src/plugins/User/: CMakeLists.txt  User.cpp  User.h  User.json
(+3 files in other folders)
